--- a/index.html
+++ b/index.html
@@ -1,16 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Website Sederhana</title>
-    <script>
-        function greet() {
-            alert("Halo, Selamat datang di website ini!");
-        }
-    </script>
-</head>
-<body>
-    <h1>Selamat Datang di Website Sederhana</h1>
-    <button onclick="greet()">Klik Saya!</button>
-</body>
-</html>
+<html><head><meta name="color-scheme" content="light dark"></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">print("")
+</pre></body></html>
