--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<html><head><meta name="color-scheme" content="light dark"></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">print("")
-</pre></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="color-scheme" content="light dark">
+</head>
+<body>
+    <pre style="word-wrap: break-word; white-space: pre-wrap;"></pre>
+    <script>
+      print("kamu kaya kanjut")
+    </script>
+</body>
+</html>
